--- a/Feature 7/dictionary.html
+++ b/Feature 7/dictionary.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Responsive Sidebar</title>
+    <title>MindFlow | Dictionary</title>
     <!-- Link Styles -->
     <link rel="stylesheet" href="style.css" />
     <link
