--- a/Feature 4/classes.html
+++ b/Feature 4/classes.html
@@ -5,6 +5,7 @@
   <!-- Link Styles -->
   <link rel="stylesheet" href="style.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
   <div class="sidebar">
@@ -84,14 +85,33 @@
   <!-- Content Section -->
   <section class="home-section">
     <div class="content text active" id="classes">Classes</div>
-    <div class="class-box">
-      <div class="classes"></div>
-      <div class="classes"></div>
-      <div class="classes"></div>
-      <div class="classes"></div>
-      <div class="classes"></div>
-      <div class="classes"></div>
+    <div class="card-section">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="class.jfif" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">What is Grammar ?</h5>
+          <p class="card-text">Grammar refers to the system and structure of a language, including the rules and conventions that govern the use of words and sentences.</p>
+          <a href="https://mindflow-what-is-grammer-live-class.vercel.app/" target="_blank" class="btn btn-primary">Join Class</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="class.jfif" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">What is Grammar ?</h5>
+          <p class="card-text">Grammar refers to the system and structure of a language, including the rules and conventions that govern the use of words and sentences.</p>
+          <a href="https://mindflow-what-is-grammer-live-class.vercel.app/" target="_blank" class="btn btn-primary">Join Class</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem; ">
+        <img class="card-img-top" src="class.jfif" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">What is Grammar ?</h5>
+          <p class="card-text">Grammar refers to the system and structure of a language, including the rules and conventions that govern the use of words and sentences.</p>
+          <a href="https://mindflow-what-is-grammer-live-class.vercel.app/" target="_blank" class="btn btn-primary">Join Class</a>
+        </div>
+      </div>
     </div>
+    
     
   </section>
 
