modified:   Feature 4/classes.html

--- a/Feature 4/classes.html
+++ b/Feature 4/classes.html
@@ -35,7 +35,7 @@
         <span class="tooltip">Read Aloud</span>
       </li>
       <li>
-          <a href="../feature 7/dictionary.html" class="tab-link">
+          <a href="../Feature 7/dictionary.html" class="tab-link">
             <i class='bx bxs-book-alt'></i>
             <span class="link_name">Dictionary</span>
           </a>
